--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body {
-    background-color:aquamarine;
+    background-color: dimgray;
+}
+
+#header {
+    color:aliceblue;
+    background-color: rgb(31, 30, 30);
+    text-align: center;
+    font-size: 50px;
+    padding: 30px;
 }
