--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,6 @@ body {
     background-color: rgb(31, 30, 30);
     text-align: center;
     font-size: 50px;
-    padding: 30px;
+    padding-top:40px;
+    padding-bottom:40px;
 }
